--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,25 @@ div.form1{
      padding: 20px;
 }
 
+.objeto1{
+  background-color: rgb(54, 54, 133);
+  border: 2px solid blue;
+  border-radius: 15px;
+  padding: 10px;
+  display: flex;
+  flex-direction: row;
+}
+.objeto2{
+  background-color: rgba(119, 119, 119, 0.589);
+  border: 2px solid rgb(146, 190, 255);
+  border-radius: 15px;
+  padding: 10px;
+  display: flex;
+  flex-direction: row;
+  margin: 10px;
+}
+
+
 li.list1 {
   display: inline;
 }
