--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,7 @@ div.form1{
   padding: 10px;
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
 }
 .objeto2{
   background-color: rgba(119, 119, 119, 0.589);
