--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,6 @@ header.class1 {
  
 }
 
-
 div.form1{
   background-color: rgba(63, 63, 63, 0.753);
   padding: 20px;
@@ -36,7 +35,13 @@ div.form1{
   margin: 10px;
 }
 
+select.listaCuenta{
+  margin-top: 20px;
 
+}
+form.formMov{
+  display: none;
+}
 li.list1 {
   display: inline;
 }
